[package]
name = "rust_test-read_text"
version = "0.1.0"
authors = ["ismesunny <lorshousunny@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
seahorse = "1.0.0"
serde_json = "1.0"